Implemented recipient pre filtering based in URL

--- a/sqlalchemy-datatables/examples/pyramid_tut/development.ini
+++ b/sqlalchemy-datatables/examples/pyramid_tut/development.ini
@@ -48,12 +48,12 @@ level = INFO
 handlers = console
 
 [logger_pyramid_tut]
-level = DEBUG
+level = INFO
 handlers =
 qualname = pyramid_tut
 
 [logger_sqlalchemy]
-level = INFO
+level = WARN
 handlers =
 qualname = sqlalchemy.engine
 # "level = INFO" logs SQL queries.
